--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body{
+  background: url(https://images.pexels.com/photos/4827/nature-forest-trees-fog.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260)no-repeat;
+  background-size: cover;
+}
+
 .App {
   text-align: center;
 }
