--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -15,8 +15,8 @@
     /* background-color: red; */
 }
 
-@media all and (min-width: 800px){
+/* @media all and (min-width: 800px){
     body {
         font-size: 10px;
     }
-}
+} */
