--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,4 +1,5 @@
 .navbar {
+    font-family: 'Bebas Neue';
     display: flex;
     justify-content: space-evenly;
     list-style: none;
@@ -11,12 +12,28 @@
     padding-bottom: 40px;
 }
 
-.title {
-    /* background-color: red; */
+.navbar a:hover{
+    color: rgb(16, 27, 80);
 }
 
-/* @media all and (min-width: 800px){
+.navbar a:visited{
+    color: darkred;
+}
+
+.navbar a:link{
+    color: black;
+}
+
+
+.title {
+    /* background-color: red; */
+    font-size: 50px;
+    font-family: 'Bebas Neue';
+    letter-spacing: 5px;
+}
+
+@media all and (max-width: 800px){
     body {
         font-size: 10px;
     }
-} */
+}
