--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -47,6 +47,26 @@
 }
 
 h2 {
+    font-size: 23px;
     color: white;
-    text-shadow: 2px 2px 5px black;
+    /* text-shadow: 10px 10px 30px black; */
+}
+
+.projects-row h2{
+  font-family: 'Bebas Neue';
+  letter-spacing: 4px;
+  background: rgba(100, 10, 10, 0.7);
+  width: 350px;
+  height: 50px;
+  border-radius: 30px;
+  line-height: 50px;
+  color: white;
+  margin: 0 auto;
+}
+
+@media all and (max-width: 800px){
+    .projects-row{
+        display: flex;
+        flex-direction: column;
+    }
 }
