--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -44,6 +44,7 @@
     background: rgb(255, 255, 255);
     transition: all 0.3s ease;  
     padding: 10px;
+    font-size: 18px;
 }
 
 h2 {
@@ -61,12 +62,32 @@ h2 {
   border-radius: 30px;
   line-height: 50px;
   color: white;
-  margin: 0 auto;
+  margin-bottom: 10px;
+  margin-left: 48px;
 }
 
 @media all and (max-width: 800px){
     .projects-row{
         display: flex;
         flex-direction: column;
+        font-size: 18px;
+        /* margin-bottom: 40px; */
+    }
+
+    .hogwarts {
+        margin: auto auto 10px auto;
+    }
+
+    .goat{
+        margin: auto auto 30px auto;
+    }
+
+
+    .speak-ez{
+        margin: auto auto 10px auto;
+    }
+
+    .projects-row h2{
+        margin: auto auto 10px auto;
     }
 }
